--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,18 +4,18 @@
 #####
 [versions]
 accompanist = "0.32.0"
-androidGradlePlugin = "8.1.4"
-androidx-activity-compose = "1.8.1"
+androidGradlePlugin = "8.2.1"
+androidx-activity-compose = "1.8.2"
 androidx-appcompat = "1.6.1"
-androidx-benchmark = "1.2.0"
-androidx-benchmark-junit4 = "1.2.1"
+androidx-benchmark = "1.2.2"
+androidx-benchmark-junit4 = "1.2.2"
 androidx-compose-bom = "2023.10.01"
 androidx-constraintlayout = "1.0.1"
-androidx-corektx = "1.13.0-alpha01"
+androidx-corektx = "1.13.0-alpha03"
 androidx-glance = "1.0.0"
-androidx-lifecycle-compose = "2.6.2"
-androidx-lifecycle-runtime-compose = "2.6.2"
-androidx-navigation = "2.7.5"
+androidx-lifecycle-compose = "2.7.0"
+androidx-lifecycle-runtime-compose = "2.7.0"
+androidx-navigation = "2.7.6"
 androidx-palette = "1.0.0"
 androidx-test = "1.5.0"
 androidx-test-espresso = "3.5.1"
@@ -34,20 +34,20 @@ gradle-versions = "0.50.0"
 hilt = "2.48.1"
 hiltExt = "1.1.0"
 # @pin When updating to AGP 7.4.0-alpha10 and up we can update this https://developer.android.com/studio/write/java8-support#library-desugaring-versions
-jdkDesugar = "1.2.2"
+jdkDesugar = "2.0.4"
 junit = "4.13.2"
 # @pin Update in conjuction with Compose Compiler
 kotlin = "1.9.20"
-kotlinx_immutable = "0.3.5"
+kotlinx_immutable = "0.3.6"
 ksp = "1.9.20-1.0.14"
 maps-compose = "3.1.1"
-material = "1.10.0"
+material = "1.11.0"
 # @keep
 minSdk = "21"
 okhttp = "4.11.0"
 robolectric = "4.9.2"
 rome = "1.18.0"
-room = "2.6.0"
+room = "2.6.1"
 secrets = "2.0.1"
 # @keep
 targetSdk = "33"
@@ -91,7 +91,7 @@ androidx-glance-appwidget = { module = "androidx.glance:glance-appwidget", versi
 androidx-glance-material3 = { module = "androidx.glance:glance-material3", version.ref = "androidx-glance" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidxHiltNavigationCompose" }
 androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle-compose" }
-androidx-lifecycle-runtime = "androidx.lifecycle:lifecycle-runtime-ktx:2.6.0-alpha04"
+androidx-lifecycle-runtime = "androidx.lifecycle:lifecycle-runtime-ktx:2.7.0"
 androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle-runtime-compose" }
 androidx-lifecycle-viewModelCompose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle-compose" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle-compose" }
