Implement daily Forecast screen (#6)

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Feb 26 09:36:49 IRST 2024
+#Fri Mar 08 16:32:32 GMT+03:30 2024
 sdk.dir=D\:\\new-inforamtion\\article\\sdk
+#sdk.dir=D\:\\android-sdk
