--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Mar 08 16:32:32 GMT+03:30 2024
-sdk.dir=D\:\\new-inforamtion\\article\\sdk
-#sdk.dir=D\:\\android-sdk
+#Wed Jun 26 13:46:20 IRST 2024
+sdk.dir=D\:\\android-sdk
