--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Jun 26 13:46:20 IRST 2024
-sdk.dir=D\:\\android-sdk
+#Sun Jul 07 10:27:08 IRST 2024
+sdk.dir=D\:\\new-inforamtion\\article\\sdk
+#sdk.dir=D\:\\android-sdk
